# bird-taxonomy-evals

./: .gitignore  README.md  RESULTS.md  pyproject.toml  taxonomy-eval-design.md
.github/workflows/: validate.yml
data/: ioc_manifest.json  scenarios.yaml  taxonomy_reference.csv
data/probes/: theropod.yaml
logs/latest/: .eval-set-id  2026-07-02T00-19-08-00-00_taxonomy-eval_Kzt5t42iH6ziB5Gik9Dh2J.eval  2026-07-02T00-19-12-00-00_taxonomy-eval_ngaAh2pxLkcwsCBzUmGU4q.eval  2026-07-02T00-19-16-00-00_taxonomy-eval_Emj5mhhSP8BQYyQMcGZDQc.eval  2026-07-02T00-19-19-00-00_taxonomy-eval_m7SxenW3svjKZS9HfrNLgU.eval  2026-07-02T00-19-24-00-00_taxonomy-eval_YfDQZ2KfqaNUjRPdrkhVKV.eval  2026-07-02T00-19-27-00-00_taxonomy-eval_Szhxi29eynNmytH3qXZ8hh.eval  eval-set.json  logs.json
prompts/: taxonomy.txt  taxonomy_extinct.txt
results/demo/: by_dispute_block.csv  by_level.csv  by_prompt.csv  by_prompt_variant.csv  by_scenario.csv  classification.csv  consistency.csv  manifest.json  summary.json
results/latest/: by_dispute_block.csv  by_level.csv  by_prompt.csv  classification.csv  consistency.csv  manifest.json  predictions.jsonl  prompts_snapshot.yaml  summary.json
results/latest_inspect/: by_dispute_block.csv  by_level.csv  by_prompt.csv  classification.csv  consistency.csv  summary.json
results/probes/: manifest.json  (+1 more)
scripts/: derive_ioc_counts.py  generate_demo_predictions.py  report_dispute_blocks.py  run_probe.py
src/: ingest_inspect.py  inspect_task.py  run_eval.py  run_inspect.py  schema.py  score.py  validate_scenarios.py
tests/: test_score.py
(+4 files in other folders)
