[project]
name = "bird-taxonomy-evals"
version = "0.1.0"
description = "LLM eval benchmark for taxonomic hierarchy calibration with IOC ground truth"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
validate-scenarios = "src.validate_scenarios:main"
run-eval = "src.run_eval:main"
score-eval = "src.score:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
